<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/quiz_master"
            android:textSize="24sp"
            android:textStyle="italic"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/caption"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@color/black"/>

        <TextView
            style="@style/Textbox_style"
            android:text="@string/question1" />

        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkboxOption1"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkboxOption2"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/checkbox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkboxOption3"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/checkbox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkboxOption4"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            style="@style/Textbox_style"
            android:text="@string/question2" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_button1"
                style="@style/Radio_Button_Style"
                android:text="@string/RadioButton1" />

            <RadioButton
                android:id="@+id/radio_button2"
                style="@style/Radio_Button_Style"
                android:text="@string/RadioButton2" />

            <RadioButton
                android:id="@+id/radio_button3"
                style="@style/Radio_Button_Style"
                android:text="@string/RadioButton3" />
        </RadioGroup>

          <TextView
            style="@style/Textbox_style"
            android:text="@string/question3" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:maxLines="1"
            android:singleLine="true" />

        <TextView
            style="@style/Textbox_style"
            android:text="@string/question4" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_button4_1"
                style="@style/Radio_Button_Style"
                android:text="@string/RadioButton4_1" />

            <RadioButton
                android:id="@+id/radio_button4_2"
                style="@style/Radio_Button_Style"
                android:text="@string/RadioButton4_2" />

            <RadioButton
                android:id="@+id/radio_button4_3"
                style="@style/Radio_Button_Style"
                android:text="@string/RadioButton4_3" />
        </RadioGroup>

        <TextView
            style="@style/Textbox_style"
            android:text="@string/question5" />

        <CheckBox
            android:id="@+id/checkbox5_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkboxOption5_1"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/checkbox5_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkboxOption5_2"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/checkbox5_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkboxOption5_3"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/checkbox5_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkboxOption5_4"
            android:textAppearance="?android:textAppearanceMedium" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:onClick="submit_button"
            android:text="@string/submit" />

    </LinearLayout>
</ScrollView>